k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: charisma
  labels:
    name: charisma
